--- a/share/man/man7/release.7
+++ b/share/man/man7/release.7
@@ -30,7 +30,7 @@
 .\"
 .\" $FreeBSD: src/share/man/man7/release.7,v 1.3.2.6 2003/04/12 20:42:30 murray Exp $
 .\"
-.Dd May 9, 2015
+.Dd March 3, 2019
 .Dt NRELEASE 7
 .Os
 .Sh NAME
@@ -113,6 +113,11 @@ Do not add any packages (for debugging purposes).
 This is equivalent to setting
 .Va DPORTS_PACKAGES
 empty.
+.It Cm binpkgs
+Install binary packages using
+.Xr pkg 8
+instead of building them from
+.Xr dports 7 .
 .El
 .Pp
 During the process of rolling a release a check is performed to find
