socket: Implement the SO_USER_COOKIE option
This socket option allows to attach an arbitrary uint32_t value to a
socket as the user-defined cookie/metadata, and then the cookie can be
used in the kernel help manipulate the traffic of the socket.

For example, this socket option can be set by WireGuard and then matched
in IPFW to help control the WireGuard traffic.

This commit is mostly derived from FreeBSD, but I decided to also
support the new option in getsockopt().  Its usage in IPFW comes in the
next commit.

Bump __DragonFly_version.

Credit: https://github.com/freebsd/freebsd-src/commit/d5e8d236f4009fc2611f996c317e94b2c8649cf5

--- a/lib/libc/sys/getsockopt.2
+++ b/lib/libc/sys/getsockopt.2
@@ -150,6 +150,7 @@ and set with
 .It Dv SO_SNDTIMEO Ta "set timeout value for output"
 .It Dv SO_RCVTIMEO Ta "set timeout value for input"
 .It Dv SO_ACCEPTFILTER Ta "set accept filter on listening socket"
+.It Dv SO_USER_COOKIE Ta "set the user cookie (uint32_t value)"
 .It Dv SO_TYPE Ta "get the type of the socket (get only)"
 .It Dv SO_ERROR Ta "get and clear error on the socket (get only)"
 .It Dv SO_RERROR Ta "enables receive error reporting"
@@ -351,6 +352,11 @@ to provide additional configuration options at attach time.
 Passing in an
 .Fa optval
 of NULL will remove the filter.
+.Pp
+.Dv SO_USER_COOKIE
+can be used to attach an arbitrary uint32_t value to the socket.
+The value acts like a user-defined cookie and can be used in the kernel
+code that manipulates traffic related to the socket.
 .Pp
 Finally,
 .Dv SO_TYPE
