[REVIEW] gpt(8): Use DragonFly's own UUIDs for 'swap' and 'ufs' type aliases
Don't reuse/share the FreeBSD's UUIDs for the 'swap' and 'ufs' type
aliases; instead, use the DragonFly's own ones, which are already
defined in <sys/gpt.h> and "/etc/defaults/uuids".

This affects only the "add" command and shouldn't cause any troubles.

--- a/sbin/gpt/gpt.8
+++ b/sbin/gpt/gpt.8
@@ -201,9 +201,11 @@ NetBSD Swap
 .It Cm openbsd
 OpenBSD Data
 .It Cm swap
-FreeBSD Swap
+.Dx
+Swap
 .It Cm ufs
-FreeBSD UFS/UFS2
+.Dx
+UFS1
 .It Cm vinum
 .Dx
 .Xr vinum 4
